--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,606 @@
+body {
+  background-color: #90D301;
+  font-family: Poppins;
+}
+
 .App {
   text-align: center;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+  color: inherit;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-main-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  padding: 20px 0;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+}
+
+.navbar-main-container img {
+  min-width: 20px;
+  width: 10vw;
+  max-width: 80px;
+  margin-left: 50px;
+}
+
+.navbar-links {
+  margin: auto 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-links ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar-links li {
+  width: auto;
+  margin: 0 20px;
+  font-size: 16px;
+}
+
+.section-1 {
+   margin: 0;
+}
+
+.top-image-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.top-image-container img {
+  height: 550pt;
+}
+
+.section-1-heading {
+  color: white;
+  text-align: left;
+  padding-left: 3%;
+  z-index: 2;
+  position: relative;
+}
+
+.section-1-heading img {
+  width: 60%;
+}
+
+.section-1-sub-section img {
+  margin: 230px auto 100px;
+  width: 90%;
+  height: auto;
+}
+
+.services-section {
+  background: #292929;
+  padding-bottom: 50px;
+}
+
+.services-heading {
+  width: 90%;
+  font-size: 20vw;
+  font-family: Oswald;
+  margin: 10px auto;
+  letter-spacing: 1.2vw;
+  color: #3E3E3E;
+}
+
+.services-heading p {
+  margin: 5px auto;
+}
+
+.services-list {
+  width: 90%;
+  margin: 0 auto;
+  color: white;
+  font-family: Oswald;
+}
+
+.service-item {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.service-item hr {
+  border: 3px solid white;
+}
+
+.service-item-heading {
+  font-size: 3vw;
+  display: flex;
+  align-items: center;
+}
+
+.service-item-heading p {
+  text-align: left;
+  width: 100%;
+  margin: 20px auto;
+}
+
+.service-item-heading img {
+  width: 5%;
+}
+
+
+.project-heading img {
+  width: 90%;
+}
+
+.project-description {
+  font-family: Oswald;
+  font-size: 4vw;
+  margin-bottom: 3vw;
+}
+
+.project-description p {
+  margin: 0 auto;
+  color: #507600;
+}
+
+.project-description hr {
+  border: 1px solid #72A700;
+  margin: 5px 0;
+}
+
+.project-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.project-list-item {
+  max-width: 33%;
+  margin: 2%;
+  box-shadow: 5px 5px 100px black;
+  border-radius: 2vw;
+}
+
+.project-list-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 2vw;
+}
+
+.section-3 {
+  background: #292929;
+  border-radius: 5vw;
+  margin: 5vw auto;
+}
+
+.leadership-section {
+  color: white;
+  font-family: Oswald;
+}
+
+.leadership-heading {
+  font-size: 7vw;
+  text-align: left;
+}
+
+.leadership-heading p {
+  margin: 0 5vw;
+  padding: 2vw 0;
+}
+
+.leadership-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.leader:nth-child(1) {
+  text-align: left;
+}
+
+.leader:nth-child(2) {
+  text-align: right;
+}
+
+.leader img {
+  width: 80%;
+  margin-left: 0;
+}
+
+.leader:nth-child(2) img {
+  margin-top: -10vw;
+}
+
+.section-3-seperator {
+  width: 90%;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.section-3-seperator img {
+  width: 80%;
+  margin: 10vw auto;
+}
+
+.contact-section {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin: 20px auto;
+}
+
+.contact-content {
+  width: 45%;
+  color: white;
+  margin-left: 5%;
+  text-align: left;
+}
+
+.contact-heading {
+  font-family: Oswald;
+  font-size: 5vw;
+  margin: 0 auto;
+  line-height: 0;
+}
+
+.contact-describer {
+  display: flex;
+  flex-direction: row;
+}
+
+.contact-description {
+  margin-left: 2vw;
+  text-align: left;
+  margin-top: 0;
+}
+
+.contact-description p {
+  margin-top: 0;
+}
+
+.aesthetic-box {
+  height: 30vw;
+  width: 30vw;
+  top: -100px;
+  background: #90D301;
+}
+
+.contact-form-container {
+  width: 50%;
+}
+
+.contact-form {
+  width: 80%;
+  margin: 20px auto;
+  border-radius: 10px;
+  background: white;
+  padding: 40px 0;
+}
+
+.contact-input-container input {
+  width: 70%;
+  background-color: #E2FFB3;
+  color: black;
+  border: none;
+  padding: 1vw;
+  margin: 1vw;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.contact-input-container textarea {
+  width: 70%;
+  background-color: #E2FFB3;
+  color: black;
+  border: none;
+  padding: 1vw;
+  margin: 1vw;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.contact-button-container button {
+  border: none;
+  background: #90D301;
+  padding: 20px;
+  text-align: right;
+  color: white;
+  letter-spacing: 2px;
+  border-radius: 10px;
+  margin-left: 55%;
+}
+
+::placeholder {
+  color: #2A2A2A;
+  opacity: 1; /* Firefox */
+}
+
+::-ms-input-placeholder { /* Edge 12 -18 */
+  color: #2A2A2A;
+}
+
+.partners-heading {
+  text-align: left;
+}
+
+.partners-heading img {
+  margin-left: 7%;
+  width: 30%;
+}
+
+.partners-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 5% 10%;
+}
+
+.partner-item {
+  width: 28%;
+  margin: 2.5%;
+}
+
+.partner-item img {
+  width: 100%;
+}
+
+.footer {
+  background: #2A2A2A;
+  color: white;
+}
+
+.footer-main-container {
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+}
+
+.footer-left-container {
+  width: 40%;
+  margin-top: 3vw;
+  margin-left: 10%;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-services {
+  width: 50%;
+}
+
+.footer-services .heading {
+  font-size: 1.5vw;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.footer-services .service {
+  font-size: 1vw;
+}
+
+.quick-links {
+  width: 50%;
+}
+
+.quick-links .heading {
+  font-size: 1.5vw;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.footer-right-container {
+  width: 45%;
+  margin-left: 5%;
+}
+
+.footer-logo {
+  width: 40%;
+  margin-top: 5vw;
+}
+
+.footer-logo img {
+  width: 100%;
+}
+
+.footer-description {
+  width: 80%;
+  margin: 10px 0;
+}
+
+.footer-right-container .contact-container {
+  display: flex;
+  background: white;
+  width: 70%;
+  margin: 20px 0;
+  border-radius: 22px;
+}
+
+.contact-container .contact-input {
+  width: 70%;
+}
+
+.contact-container .contact-input input {
+  border: none;
+  padding: 20px;
+  border-radius: 22px;
+  font-size: 18px;
+  width: 100%;
+}
+
+.contact-container .contact-input input:focus {
+  outline: none;
+}
+
+.contact-container button {
+  width: 30%;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  font-size: 18px;
+}
+
+.footer-ending {
+  padding: 40px;
+}
+
+
+@media only screen and (max-width: 1100px) {
+
+  .project-list-item {
+    max-width: 45%;
+    margin: 2%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .contact-section {
+    flex-direction: column;
+  }
+
+  .contact-content {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .aesthetic-box {
+    height: auto;
+    display: none;
+  }
+
+  .contact-form-container {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .footer-services .heading {
+    font-size: 2vw;
+  }
+
+  .footer-services .service {
+    font-size: 1vw;
+  }
+
+  .quick-links .heading {
+    font-size: 2vw;
+  }
+
+  .quick-links .service {
+    font-size: 1vw;
+  }
+
+  .footer-right-container {
+    font-size: 12px;
+  }
+
+  .contact-container .contact-input input {
+    font-size: 12px;
+  }
+
+  .contact-container button {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+
+  .project-list-item {
+    max-width: 70%;
+    margin: 2%;
+  }
+
+  .navbar-main-container img {
+    margin-left: 10px;
+  }
+
+  .navbar-links {
+    margin: auto;
+  }
+
+  .navbar-links ul {
+    padding: 0;
+  }
+
+  .navbar-links li {
+    font-size: 14px;
+    margin: 0 15px;
+  }
+
+  .top-image-container {
+    display: none;
+  }
+
+  .section-1-heading img {
+    width: 95%;
+  }
+
+  .section-1-sub-section img {
+    margin: 80px auto 80px;
+    width: 90%;
+    height: auto;
+  }
+
+  .service-item-heading {
+    font-size: 5vw;
+  }
+
+
+  .leader:nth-child(2) img {
+    margin-top: 0;
+  }
+
+  .contact-content {
+    width: 100%;
+  }
+
+  .contact-form-container {
+    width: 100%;
+  }
+
+  .footer-main-container {
+    flex-direction: column;
+  }
+
+  .footer-left-container {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .footer-right-container {
+    width: 95%;
+  }
+
+  .footer-services {
+    width: 45%;
+    margin-left: 5%;
+  }
+
+  .footer-services .heading {
+    font-size: 4vw;
+  }
+
+  .footer-services .service {
+    font-size: 2vw;
+  }
+
+  .quick-links .heading {
+    font-size: 4vw;
+  }
+
+  .quick-links .service {
+    font-size: 2vw;
+  }
+
+  .footer-right-container {
+    font-size: 14px;
+  }
+
+  .contact-container .contact-input input {
+    font-size: 14px;
+  }
+
+  .contact-container button {
+    font-size: 14px;
   }
 }
